--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.4.2
+  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -19,4 +20,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/
 
