--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   url_launcher: ^6.2.5
   timezone: ^0.9.2
   flutter_svg: ^2.0.9
+  video_player: ^2.8.2
+  chewie: ^1.7.4
 
 dev_dependencies:
   flutter_test:
