Add animated splash screen, hamburger menu drawer, and rebrand to Smart Factory
- Added animated splash screen with logo2.svg (fade, scale, rotation, pulse, glow animations)
- Created hamburger menu drawer with About and Contact navigation
- Rebranded app from Matrix TSL to Smart Factory across all screens and configs
- Updated app label, class names, and all user-facing text
- Added AppDrawer widget for consistent navigation across all screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: matrix_app
-description: Matrix TSL Smart Factory Education App
+description: Smart Factory Education App
 publish_to: 'none'
 version: 1.0.5+1
 
