--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: matrix_app
+name: smart_factory_app
 description: Smart Factory Education App
 publish_to: 'none'
-version: 1.0.8+1
+version: 1.0.9+2
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -19,7 +19,7 @@ dependencies:
   chewie: ^1.7.4
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
-  dart_snap7: ^0.5.3
+  # dart_snap7: ^0.5.3  # Replaced with Moka7 via MethodChannel
 
 dev_dependencies:
   flutter_test:
