Add v1.0.9 APK to releases folder - Moka7 migration build
Added smart-factory-v1.0.9.apk (62MB) with Moka7 implementation. Updated .gitignore to allow APKs in releases folder.

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# APK files - use GitHub Releases instead
+# APK files - ignore build directory APKs, but keep releases folder APKs
 *.apk
-releases/*.apk
+!releases/*.apk
 
