--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ app.*.map.json
 *.apk
 !releases/*.apk
 
+# Old APK versions (keep only latest in git)
+releases/smart-factory-v1.0.[0-8]*.apk
+releases/app-release.apk
+
